fixed element alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,46 +71,35 @@ p {
 
 .content {
     width: 75%;
-    display: inline-block;
     margin-left: 20px;
-}
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    flex: 3;
+    justify-content: space-between;
 }
 
 article {
+    margin: auto;
     margin-bottom: 20px;
-    /*padding: 50px;*/
-    height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /*background-color: #0072bb; */
     color: #2a607c;
-    display: flex;
-    flex-direction: row;
+    display: flex;   
+    flex-wrap: wrap;
 }
 
 
 article h2 {
     font-size: 36px;
-    margin-right: 20px;
-    text-align: justify;
-    /*background-color: #ffffff;*/
-    box-sizing: border-box;
+    text-align: right;
+    vertical-align: top;
+    flex: 1;
+    
+    
 }
 
 article p {
-    /*background-color: #0072bb;*/
-    /*padding: 50px;*/
     margin-left: 20px;
-    border-left-width: 5px;
+    padding-left: 20px;
+    border-left: 5px solid;
+    flex: 3;
 }
 
 footer {
